tests/errors/bad_not3.asm
FUNC LABEL 0
    NOT VAL 3
    RET
